Hit enter prompt

--- a/templates/gerty/index.html
+++ b/templates/gerty/index.html
@@ -250,7 +250,7 @@
           multiple
           hide-dropdown-icon
           new-value-mode="add-unique"
-          label="Invoice keys of wallets to watch"
+          label="Invoice keys of wallets to watch (hit enter)"
         >
           <q-tooltip>Hit enter to add values</q-tooltip>
         </q-select>
@@ -268,7 +268,7 @@
           hide-dropdown-icon
           new-value-mode="add-unique"
           max-values="4"
-          label="URLs to watch."
+          label="URLs to watch (hit enter)"
         >
           <q-tooltip>Hit enter to add values</q-tooltip>
         </q-select>
