--- a/templates/gerty/index.html
+++ b/templates/gerty/index.html
@@ -4,7 +4,7 @@
   <div class="col-12 col-md-8 col-lg-7 q-gutter-y-md">
     <q-card>
       <q-card-section>
-        <q-btn unelevated color="primary" @click="formDialog.show = true"
+        <q-btn unelevated color="primary" @click="updateformDialog()"
           >New Gerty
         </q-btn>
       </q-card-section>
@@ -68,7 +68,7 @@
                   icon="perm_data_setting"
                   color="primary"
                 >
-                  <q-tooltip> Gerty Settings </q-tooltip>
+                  <q-tooltip> Get Gerty API URL </q-tooltip>
                 </q-btn>
               </q-td>
               <q-td v-for="col in props.cols" :key="col.name" :props="props">
@@ -83,7 +83,9 @@
                   @click="updateformDialog(props.row.id)"
                   icon="edit"
                   color="light-blue"
-                ></q-btn>
+                >
+                  <q-tooltip> Change settings </q-tooltip>
+                </q-btn>
               </q-td>
               <q-td auto-width>
                 <q-btn
@@ -616,8 +618,8 @@
           self.toggleStates.onchain
         self.formDialog.data.display_preferences.onchain_difficulty_retarget_date =
           self.toggleStates.onchain
-        self.formDialog.data.display_preferences.onchain_difficulty_blocks_remaining =
-          !self.toggleStates.onchain
+        self.formDialog.data.display_preferences.onchain_difficulty_blocks_remaining = !self
+          .toggleStates.onchain
         self.formDialog.data.display_preferences.onchain_difficulty_epoch_time_remaining =
           self.toggleStates.onchain
         self.formDialog.data.display_preferences.onchain_block_height =
@@ -658,21 +660,43 @@
         this.settingsDialog.apiUrl = apiUrl
         this.settingsDialog.show = true
       },
-      updateformDialog: function (formId) {
-        var gerty = _.findWhere(this.gertys, {id: formId})
-        this.formDialog.data.id = gerty.id
-        this.formDialog.data.name = gerty.name
-        this.formDialog.data.type = gerty.type
-        this.formDialog.data.utc_offset = gerty.utc_offset
-        this.formDialog.data.lnbits_wallets = JSON.parse(gerty.lnbits_wallets)
-        this.formDialog.data.urls = JSON.parse(gerty.urls)
-        ;(this.formDialog.data.exchange = gerty.exchange),
-          (this.formDialog.data.mempool_endpoint = gerty.mempool_endpoint),
-          (this.formDialog.data.refresh_time = gerty.refresh_time),
-          (this.formDialog.data.display_preferences = JSON.parse(
+      clearGertySettings: function () {
+        this.formDialog.data.id = null
+        this.formDialog.data.name = null
+        this.formDialog.data.type = 'Gerty'
+        this.formDialog.data.utc_offset = 0
+        this.formDialog.data.lnbits_wallets = []
+        this.formDialog.data.urls = null
+        this.formDialog.data.exchange = null
+        this.formDialog.data.mempool_endpoint = 'https://mempool.space'
+        this.formDialog.data.refresh_time = 300
+
+        let vm = this
+        for (const [key, value] of Object.entries(
+          this.formDialog.data.display_preferences
+        )) {
+          vm.formDialog.data.display_preferences[key] = false
+        }
+      },
+      updateformDialog: async function (formId = null) {
+        this.clearGertySettings()
+        console.log('formId', formId)
+        if (formId) {
+          let gerty = await _.findWhere(this.gertys, {id: formId})
+          this.formDialog.data.id = gerty.id
+          this.formDialog.data.name = gerty.name
+          this.formDialog.data.type = gerty.type
+          this.formDialog.data.utc_offset = gerty.utc_offset
+          this.formDialog.data.lnbits_wallets = JSON.parse(gerty.lnbits_wallets)
+          this.formDialog.data.urls = JSON.parse(gerty.urls)
+          this.formDialog.data.exchange = gerty.exchange
+          this.formDialog.data.mempool_endpoint = gerty.mempool_endpoint
+          this.formDialog.data.refresh_time = gerty.refresh_time
+          this.formDialog.data.display_preferences = JSON.parse(
             gerty.display_preferences
-          )),
-          (this.formDialog.show = true)
+          )
+        }
+        this.formDialog.show = true
       },
       sendFormDataGerty: function () {
         if (this.formDialog.data.id) {
@@ -730,7 +754,6 @@
         var self = this
         if (
           this.formDialog.data.display_preferences.dashboard ||
-          this.formDialog.data.display_preferences.dashboard_onchain ||
           this.formDialog.data.display_preferences.dashboard_onchain ||
           this.formDialog.data.display_preferences.lightning_dashboard ||
           this.formDialog.data.display_preferences.url_checker
