--- a/templates/gerty/gerty.html
+++ b/templates/gerty/gerty.html
@@ -40,10 +40,6 @@ endblock %} {% block page %}
     unelevated
     class="q-pa-none q-pa-sm"
   >
-    <q-card-section class="text-h1 q-pa-none">
-      <small> <b>{{wallet["amount"]}}</b></small>
-      <small class="text-h4">({{wallet["name"]}})</small>
-    </q-card-section>
   </q-card>
 </div>
 
@@ -165,7 +161,7 @@ endblock %} {% block page %}
         url_checker: {},
         dashboard_mining: {},
         gerty: [],
-        gerty_id: `{{gerty}}`,
+        gerty_id: "{{gerty}}",
         gertyname: '',
         walletColors: [
           {first: '#3f51b5', second: '#1a237e'},
@@ -180,7 +176,7 @@ endblock %} {% block page %}
       }
     },
     methods: {
-      getGertyInfo: async () => {
+      async getGertyInfo() {
         for (let i = 0; i < 8; i++) {
           try {
             const {data} = await LNbits.api.request(
@@ -241,7 +237,7 @@ endblock %} {% block page %}
         return this.gerty
       }
     },
-    async created() => {
+    async created() {
       await this.getGertyInfo()
     }
   })
