--- a/templates/gerty/gerty.html
+++ b/templates/gerty/gerty.html
@@ -161,7 +161,7 @@ endblock %} {% block page %}
         url_checker: {},
         dashboard_mining: {},
         gerty: [],
-        gerty_id: "{{gerty}}",
+        gerty_id: '{{gerty}}',
         gertyname: '',
         walletColors: [
           {first: '#3f51b5', second: '#1a237e'},
