Fix dashboard bug with display of wallet balances

--- a/templates/gerty/gerty.html
+++ b/templates/gerty/gerty.html
@@ -40,6 +40,8 @@ endblock %} {% block page %}
     unelevated
     class="q-pa-none q-pa-sm"
   >
+     <q-card-section class="text-h1 q-pa-none">
+      <strong><small><span v-text="wallet.amount"></span></small></strong>&nbsp;<small class="text-h4" v-text="wallet.name"></small>
   </q-card>
 </div>
 
