--- a/templates/gerty/gerty.html
+++ b/templates/gerty/gerty.html
@@ -40,8 +40,9 @@ endblock %} {% block page %}
     unelevated
     class="q-pa-none q-pa-sm"
   >
-     <q-card-section class="text-h1 q-pa-none">
+    <q-card-section class="text-h1 q-pa-none">
       <strong><small><span v-text="wallet.amount"></span></small></strong>&nbsp;<small class="text-h4" v-text="wallet.name"></small>
+    </q-card-section>
   </q-card>
 </div>
 
